fix: bypass jwt filter for OPTIONS and ensure cors source